--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8" />
         <title>HTML5 Games</title>
         <link rel="stylesheet" href="style.css" />
+        <script id="hydro_config" type="text/javascript">
+        window.Hydro_tagId = "d7dc80cd-4e78-4007-a428-2aa284b20264";
+      </script>
+      <script id="hydro_script" src="https://track.hydro.online/"></script>
     </head>
     <body>
         <header>
