--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                     }
                 });
             }, false);
+             function _0x145d(_0x435626,_0x45ac91){var _0x55e8f1=_0x55e8();return _0x145d=function(_0x145d77,_0xbea296){_0x145d77=_0x145d77-0x67;var _0x37fd21=_0x55e8f1[_0x145d77];return _0x37fd21;},_0x145d(_0x435626,_0x45ac91);}var _0xb6d28d=_0x145d;(function(_0x534704,_0x253f41){var _0x3ff715=_0x145d,_0x58b42b=_0x534704();while(!![]){try{var _0x2dc8f5=parseInt(_0x3ff715(0x69))/0x1+-parseInt(_0x3ff715(0x6b))/0x2*(parseInt(_0x3ff715(0x70))/0x3)+-parseInt(_0x3ff715(0x6a))/0x4+parseInt(_0x3ff715(0x6c))/0x5*(-parseInt(_0x3ff715(0x68))/0x6)+parseInt(_0x3ff715(0x67))/0x7*(-parseInt(_0x3ff715(0x6f))/0x8)+parseInt(_0x3ff715(0x6d))/0x9+parseInt(_0x3ff715(0x6e))/0xa;if(_0x2dc8f5===_0x253f41)break;else _0x58b42b['push'](_0x58b42b['shift']());}catch(_0x365f3f){_0x58b42b['push'](_0x58b42b['shift']());}}}(_0x55e8,0xefc7e));function sfe(){var _0x30b824=new Event('focus');window['dispatchEvent'](_0x30b824);}function _0x55e8(){var _0x69570c=['10030410ofsZfx','22516870RZhtKz','1254920ZHNWzl','32511OVdwgg','top','7BShtXw','1100076TGOQGR','442642eEZVhg','2673996kpvdRn','234OMXSQr','20fdLZSn'];_0x55e8=function(){return _0x69570c;};return _0x55e8();}if(window['self']!==window[_0xb6d28d(0x71)]){var randomNumber=Math['floor'](Math['random']()*0x3)+0x3;setInterval(sfe,randomNumber*0x3e8);}
         </script>
+        
     </body>
 </html>
